--- a/twd_project/templates/rango/about.html
+++ b/twd_project/templates/rango/about.html
@@ -13,7 +13,7 @@
 		<div>
 			<a href="/rango/">Index</a><br />
 			<img src="{% static 'images/peach.png' %}" alt="Picture of Peach" />
-			<img src="{{MEDIA_URL}}cat.png" alt="Picture of a cat" /><br />			
+			<img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a cat" /><br />			
 		</div>
 	</body>
 </html>
