--- a/twd_project/templates/rango/index.html
+++ b/twd_project/templates/rango/index.html
@@ -12,7 +12,7 @@
 		</div>
 		<div>
 			<a href="/rango/about/">About</a><br />
-			<img src="{% static 'images/mario.jpeg' %}" alt="Picture of Mario" />
+			<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
 		</div>
 	</body>
 </html>
