Chapter 8.3 Complete (need to refactor URLs)

--- a/twd_project/templates/rango/about.html
+++ b/twd_project/templates/rango/about.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
-<html>
-	<head>
-		<title>About</title>
-	</head>
-	<body>
-		<h1>Rango says...</h1>
-		<div>
-			This tutorial has been put together by Matthew! <br />
-			<strong>{{ boldmessage }}</strong><br />
-		</div>
-		<div>
-			<a href="/rango/">Index</a><br />
-			<img src="{% static 'images/peach.png' %}" alt="Picture of Peach" />
-			<img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a cat" /><br />			
-		</div>
-	</body>
-</html>
+
+{% block title_block %}
+	About
+{% endblock %}
+
+{% block body_block %}
+<h1>Rango says...</h1>
+<div>
+	This tutorial has been put together by Matthew! <br />
+	<strong>{{ boldmessage }}</strong><br />
+</div>
+<div>
+	<img src="{% static 'images/peach.png' %}" alt="Picture of Peach" />
+	<img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a cat" /><br />			
+</div>
+{% endblock %}
