--- a/twd_project/templates/rango/about.html
+++ b/twd_project/templates/rango/about.html
@@ -12,7 +12,7 @@
 	<strong>{{ boldmessage }}</strong><br />
 </div>
 <div>
-	<img src="{% static 'images/peach.png' %}" alt="Picture of Peach" />
+	<img src="{% static 'images/peach.jpg' %}" alt="Picture of Peach" />
 	<img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a cat" /><br />			
 </div>
 {% endblock %}
